feat: Better metadata DTO handling, include users in full room DTO
