# backend/src/main/java/ch/rafaelurben/sheetmusiclearner/backend/io/async/dto/event/GeneralPieceNowAvailableEvent.java
@@ -1,7 +1,7 @@
 /* (C) 2026 - Rafael Urben */
 package ch.rafaelurben.sheetmusiclearner.backend.io.async.dto.event;
 
-import ch.rafaelurben.sheetmusiclearner.backend.io.async.dto.PieceMetadataDto;
+import ch.rafaelurben.sheetmusiclearner.backend.api.dto.PieceMetadataDto;
 
 public record GeneralPieceNowAvailableEvent(PieceMetadataDto piece) {
 
