# backend/src/main/java/ch/rafaelurben/sheetmusiclearner/backend/io/async/dto/event/GeneralRoomNowAvailableEvent.java
@@ -1,9 +1,9 @@
 /* (C) 2026 - Rafael Urben */
 package ch.rafaelurben.sheetmusiclearner.backend.io.async.dto.event;
 
-import ch.rafaelurben.sheetmusiclearner.backend.api.dto.RoomDto;
+import ch.rafaelurben.sheetmusiclearner.backend.api.dto.RoomMetadataDto;
 
-public record GeneralRoomNowAvailableEvent(RoomDto room) {
+public record GeneralRoomNowAvailableEvent(RoomMetadataDto room) {
 
   public EventDto<GeneralRoomNowAvailableEvent> asDto() {
     return new EventDto<>("room-now-available", this);
